# BUDGET-CATEGORIZATION

./: Makefile  README.md  pyproject.toml
fmoh2024/: __init__.py  commands.py  config.py  extensions.py  models.py
fmoh2024/compliance/: __init__.py  routes.py  services.py
fmoh2024/main/: __init__.py  routes.py
fmoh2024/projects/: __init__.py  routes.py  services.py
fmoh2024/static/css/: compliance.css  home.css  main.css  projects.css  styles.css
fmoh2024/static/js/: main.js
fmoh2024/static/js/compliance/: agency.js  dashboard.js
fmoh2024/static/js/main/: home.js
fmoh2024/static/js/projects/: index.js
fmoh2024/templates/: base.html  index.html
fmoh2024/templates/compliance/: agency_detail.html  dashboard.html
fmoh2024/templates/main/: index.html
fmoh2024/templates/projects/: index.html
migrations/versions/: 10b6e6b24d5f_initial_migration_implement_enum_for_.py
