[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fmoh2024"
version = "1.0.0"
requires-python = ">=3.8.1,<4"
dependencies = [
    "Flask>=3.0.2,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8",  # Changed from 9 to 7.x (compatible with Python 3.9)
    "flake8>=7,<8",
    "black>=24.0.0,<25",  # Changed from 25.x (25.x might not exist yet)
    "isort>=5.0.0,<6",    # Changed from 7.x to 5.x (more stable)
]

[tool.setuptools.package-data]
"*" = ["**/static/**/*", "**/templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"